--- a/app/views/create-account/create-account.html
+++ b/app/views/create-account/create-account.html
@@ -147,7 +147,7 @@
           }) }}        
         </div>
 
-        <p class="govuk-body"><a class="govuk-link govuk-link--no-visited-state" href="./accounts-home.html">Cancel</a></p>
+        <p class="govuk-body"><a class="govuk-link govuk-link--no-visited-state" href="javascript:window.history.back()">Cancel</a></p>
 
 
       </form>
