--- a/app/views/create-account/index.html
+++ b/app/views/create-account/index.html
@@ -14,6 +14,8 @@
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">{{pageName}}</h1>
 
+    
+
     <!-- STATS FOR CHECKER -->
     <!-- <div style="display: inline-block" class="govuk-!-margin-bottom-4">
 
@@ -33,20 +35,20 @@
 
     <!-- IDEA 1 -->
 
-    <!-- <p class="govuk-body"><a href="./checker/in-review.html" class="govuk-link--no-visited-state">Check and approve accounts</a></p> -->
+    <p class="govuk-body"><a href="./checker/in-review.html" class="govuk-link--no-visited-state">Check and approve accounts</a></p>
 
-    <h2 class="govuk-heading-m">My accounts</h2>
+    <!-- <h2 class="govuk-heading-m">My accounts</h2> -->
 
     <!-- {{ govukButton({
       text: "Create account"
     }) }} -->
 
-    <p class="govuk-body"><a href="./create-account.html" class="govuk-link--no-visited-state">Create account</a></p>
+    <!-- <p class="govuk-body"><a href="./create-account.html" class="govuk-link--no-visited-state">Create account</a></p> -->
 
-    <p class="govuk-body"><a href="./inputter/in-review.html" class="govuk-link--no-visited-state">View my submitted accounts</a></p>
+    <p class="govuk-body"><a href="./inputter/in-review.html" class="govuk-link--no-visited-state">Create and manage my accounts</a></p>
 
-    <h3 class="govuk-heading-m govuk-!-margin-bottom-">Other tasks</h3>
-    <p class="govuk-body">To resubmit accounts for other team members, you can <a href="#" class="govuk-link--no-visited-state">view all rejected accounts</a>.</p>
+    <!-- <h3 class="govuk-heading-m govuk-!-margin-bottom-">Other tasks</h3>
+    <p class="govuk-body">To resubmit accounts for other team members, you can <a href="#" class="govuk-link--no-visited-state">view all rejected accounts</a>.</p> -->
 
     <!-- IDEA 2 -->
     <!-- <div>
