--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,9 @@
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
       <p class="govuk-body" data-module="edge"><a href="./create-account/create-account.html" class="govuk-link--no-visited-state" data-message="This part of the prototype has not been built.">Create fine account</a></p>
-      <!-- <p class="govuk-body"><a href="./create-account/index.html" class="govuk-link--no-visited-state">Check and input accounts</a></p> -->
+      <p class="govuk-body"><a href="./create-account/index.html" class="govuk-link--no-visited-state">Check and input accounts</a></p>
+      <p class="govuk-body"><a href="./search/search.html" class="govuk-link--no-visited-state">Search for an account</a></p>
+
       
       
       <h2 class="govuk-heading-m">Progress for in-person testing</h2>
