--- a/app/views/create-account/checker/rejected.html
+++ b/app/views/create-account/checker/rejected.html
@@ -1,10 +1,10 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Check and approve accounts" %}
+{% set pageName = "Review accounts" %}
 
 {% block beforeContent %}
 
-<a href="../accounts-home.html" class="govuk-back-link">Back</a>
+<a href="../index.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
