--- a/app/views/create-account/inputter/deleted.html
+++ b/app/views/create-account/inputter/deleted.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="../accounts-home.html" class="govuk-back-link">Back</a>
+<a href="../index.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -15,6 +15,10 @@
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
+      {{ govukButton({
+        text: "Create account",
+        href: "../create-account.html"
+      }) }}
 
       <nav class="moj-sub-navigation" aria-label="Sub navigation">
 
