--- a/app/views/create-account/inputter/in-review.html
+++ b/app/views/create-account/inputter/in-review.html
@@ -4,8 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="../accounts-home.html" class="govuk-back-link">Back</a>
-
+<a href="../index.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -15,6 +14,11 @@
     <div class="govuk-grid-column-full">
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
+
+      {{ govukButton({
+        text: "Create account",
+        href: "../create-account.html"
+      }) }}
 
       <nav class="moj-sub-navigation" aria-label="Sub navigation">
 
@@ -49,15 +53,15 @@
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
       
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Defendant</th>
+            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Defendant</th>
 
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Date of birth</th>
+            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Date of birth</th>
             
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Created</th>
+            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Created</th>
 
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Account type</th>
+            <!-- <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Account type</th> -->
 
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Business unit</th>
+            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Business unit</th>
 
 
       
@@ -74,7 +78,7 @@
             
             <td class="govuk-table__cell">Today</td>
 
-            <td class="govuk-table__cell">Fine</td>
+            <!-- <td class="govuk-table__cell">Fine</td> -->
 
             <td class="govuk-table__cell">Cambridgeshire</td>
 
@@ -88,7 +92,7 @@
       
             <td class="govuk-table__cell">1 day ago</td>
 
-            <td class="govuk-table__cell">Fine</td>
+            <!-- <td class="govuk-table__cell">Fine</td> -->
 
             <td class="govuk-table__cell">Cambridgeshire</td>
 
@@ -103,7 +107,7 @@
       
             <td class="govuk-table__cell">1 day ago</td>
             
-            <td class="govuk-table__cell">Fine</td>
+            <!-- <td class="govuk-table__cell">Fine</td> -->
       
             <td class="govuk-table__cell">Avon and Somerset</td>
 
@@ -118,7 +122,7 @@
 
             <td class="govuk-table__cell">1 day ago</td>
 
-            <td class="govuk-table__cell">Fine</td>
+            <!-- <td class="govuk-table__cell">Fine</td> -->
       
             <td class="govuk-table__cell">Avon and Somerset</td>
 
