--- a/app/views/layouts/global.html
+++ b/app/views/layouts/global.html
@@ -25,19 +25,27 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
     }
 }) }}
 
-<nav class="x-govuk-primary-navigation" aria-labelledby="primary-navigation-heading">
+<div class="moj-primary-navigation">
+
   <div class="govuk-width-container">
-    <h2 class="govuk-visually-hidden" id="primary-navigation-heading">Navigation</h2>
-    <ul class="x-govuk-primary-navigation__list">
-      <li class="x-govuk-primary-navigation__item ">
-        <a class="x-govuk-primary-navigation__link" aria-current=page href="#">Search</a>
-      </li>
-      <li class="x-govuk-primary-navigation__item x-govuk-primary-navigation__item--current">
-        <a class="x-govuk-primary-navigation__link" href="#">Draft accounts</a>
-      </li>
-    </ul>
+
+    <div class="moj-primary-navigation__nav">
+
+      <nav class="moj-primary-navigation" aria-label="Primary navigation">
+
+        <ul class="moj-primary-navigation__list">
+          <li class="moj-primary-navigation__item">
+            <a class="moj-primary-navigation__link" aria-current="page" href="#1">Search</a>
+          </li>
+        </ul>
+
+      </nav>
+
+    </div>
   </div>
-</nav>
+
+</div>
+
 
 {% endblock %}
 
